--- a/src/main/resources/templates/manager/fileDownload.html
+++ b/src/main/resources/templates/manager/fileDownload.html
@@ -58,7 +58,7 @@
         let table = new Table("fileDownload-table")
         let downloadLogTable = new Table("download-log-table")
         downloadLogTable
-            .add(new Column("index").title("").center().width("20%"))
+            .add(new Column("index").title("#").center().width("20%"))
             .add(new Column("userName").title("다운로드 사용자 이름").left().width("30%"))
             .add(new Column("userId").title("다운로드 사용자 이름").left().width("30%"))
 
