--- a/src/main/resources/templates/manager/order.html
+++ b/src/main/resources/templates/manager/order.html
@@ -21,6 +21,32 @@
         <div class="card-body">
             <div id="order-table"></div>
         </div>
+
+        <!-- s: orderList-log-modal -->
+        <div class="modal modal-lg" id="user-orderList-log-modal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">쿠폰 사용자 리스트 조회</h4>
+                        <button type="button" class="btn-close" id="close-userList-log-btn" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <div id="user-orderList-log-table"></div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-danger" id="cancel-userList-log-btn" data-bs-dismiss="modal">취소</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- e: userList-log-modal -->
     </div>
 </th:block>
 
@@ -29,6 +55,12 @@
     <script th:inline="javascript">
         const order = /*[[${orderList}]]*/[];
         let table = new Table("order-table")
+        let userOrderListLogTable = new Table("user-orderList-log-table", false)
+        userOrderListLogTable
+            .add(new Column("index").title("#").width("5%").center())
+            .add(new Column("productName").title("주문상품").left().width("20%"))
+            .add(new Column("orderCnt").title("주문개수").left().width("20%").formatter(function(cell) { return `${cell.getValue()} 개`}))
+            .add(new Column("orderPrice").title("주문가격").left().width("20%").formatter(function(cell) { return `${Util.priceString(cell.getValue())} 원`}))
 
         $(document).ready(function(e){
 
@@ -38,10 +70,7 @@
                 .add(new Column("userId").title("주문자").width("20%").left())
                 .add(new Column("orderStatus").title("주문상태").width("10%").left())
                 .add(new Column("orderDate").title("주문날짜").width("10%").left())
-                .add(new Column("orderDetails").title("주문상품 개수").width("20%").left().formatter(function(cell) {
-                    const cellData = cell.getValue()
-                    return `${cellData.length} 개`
-                }))
+                .add(new Column("orderDetails").title("주문상품 개수").width("20%").left().formatter(function(cell) { return `${cell.getValue().length} 개` }))
                 .add(new Column("orderId").title("상태변경").width("20%").center().formatter(function(cell) {
                     const rowData = cell.getData()
                     return `<select id="orderStatus-${rowData.orderId}" class="form-select-sm orderStatus-select" style="width: 150px" data-num="${rowData.orderId}" data-status="${rowData.orderStatus}" ${(rowData.writeReviewEmpty == false) ? 'disabled' : ''} onChange="changeSelect(this)">
@@ -51,38 +80,14 @@
                                 <option value="DELIVER_ING" ${(rowData.orderStatus == 'DELIVER_ING') ? 'selected' : ''}>DELIVER_ING</option>
                             </select>`
                 }))
-                .rowFormatter(function(row) {
-                    const rowData = row.getData()
-                    const orderDetails = rowData['orderDetails']
-
-                    const holderEl = document.createElement("div")
-                    const tableEl = document.createElement("div")
-
-                    holderEl.style.boxSizing = "border-box";
-                    holderEl.style.padding = "10px 30px 10px 10px";
-                    holderEl.style.borderTop = "1px #333";
-                    holderEl.style.borderBotom = "1px #333";
-                    tableEl.style.border = "1px solid #333";
-
-                    holderEl.appendChild(tableEl);
-
-                    row.getElement().appendChild(holderEl);
-
-                    new Table(tableEl)
-                        .subTable()
-                        .setData(orderDetails)
-                        .add(new Column("productName").title("주문상품").left().width("20%"))
-                        .add(new Column("orderCnt").title("주문개수").left().width("20%").formatter(function(cell) {
-                            const data = cell.getValue()
-                            return `${data} 개`
-                        }))
-                        .add(new Column("orderPrice").title("주문가격").left().width("20%").formatter(function(cell) {
-                            const data = cell.getValue()
-                            return `${Util.priceString(data)} 원`
-                        }))
-                        .init()
-                })
                 .init()
+
+            table.rowClick((data, row) => {
+                userOrderListLogTable
+                    .setData(data['orderDetails'])
+                    .init()
+                $("#user-orderList-log-modal").modal('show')
+            })
         })
 
 
