--- a/src/main/resources/templates/bbs/notice/view.html
+++ b/src/main/resources/templates/bbs/notice/view.html
@@ -60,81 +60,11 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-
         let answerId = null;
         const post = /*[[${post}]]*/ {}
-
-        $(document).ready(function(){
-            feather.replace()
-            if(post['file']) setFileList(post['file']['fileList']);
-        })
-
-        const setFileList = (file = []) => {
-            const dom = $("#download-container")
-            dom.empty()
-
-            file.forEach((value, i) => {
-                const body =
-                    `
-                    <li style="margin-top: 10px;">
-                        <a href="#" onclick="Http.fileDownload(${value.id})">
-                            <i data-feather="download" class="front-medium-2"></i>
-                        </a>
-                        ${value['originalFileName']}
-                    </li>
-                    `
-                dom.append(body)
-            });
-            feather.replace()
-        }
-
-        /* 삭제버튼 클릭 이벤트 */
-        $("#delete-btn").on("click", function(e) {
-            Util.confirm("삭제 하시겠습니까?").then((isOk) => {
-                if(isOk) {
-                    Http.delete(`/api/post/${post['id']}`).then((res) => {
-                        if (res['httpStatus'] === 200) {
-                            Util.alert("게시글이 삭제되었습니다.").then(() => {
-                                window.location.href = `/bbs/${post['typeId']}`
-                            })
-                        }
-                    })
-                }
-            })
-        })
-
-        /* 목록버튼 클릭 이벤트 */
-        $("#list-btn").on("click", function(e){
-            window.location.href = `/bbs/${post['typeId']}`
-        })
-
-        /* 수정버튼 클릭 이벤트 */
-        $("#edit-btn").on("click", function(e){
-            window.location.href = `/bbs/edit/${post['id']}`
-        })
-
         let ckEditor;
-        const myFeatureLockId = Symbol("#content")
-        ClassicEditor
-            .create(document.querySelector('#content'), {
-                readOnly: true,
-            })
-            .then(editor => {
-                ckEditor = editor;
-                ckEditor.enableReadOnlyMode( myFeatureLockId );
-                ckEditor.setData([[${post['content']}]])
-
-                const editableElement = ckEditor.ui.view.editable.element;
-                editableElement.style.border = 'none';
-
-                const toolbarElement = ckEditor.ui.view.toolbar.element;
-                toolbarElement.style.display = 'none';
-            })
-            .catch(error => {
-                // Handle any initialization error
-            });
-
     </script>
+    <script th:src="@{'/assets/js/page/bbs/notice/bbs.notice.view.js'}"></script>
 </th:block>
 
 </html>
